# django-sentry-feedback

./: .gitignore  LICENSE  README.md  pyproject.toml
sentry_feedback/: apps.py  context_processors.py  middleware.py
sentry_feedback/templates/sentry_feedback/: widget.html
sentry_feedback/templatetags/: sentry_feedback.py
