[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-sentry-feedback"
version = "0.1.0"
description = "Drop-in Sentry user feedback widget for Django Unfold admin"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["django>=4.2"]
keywords = ["django", "sentry", "feedback", "unfold", "admin"]

[project.urls]
Repository = "https://github.com/f3nixacc-f3nixacc/django-sentry-feedback"

[tool.setuptools.packages.find]
include = ["sentry_feedback*"]

[tool.setuptools.package-data]
sentry_feedback = [
    "templates/**/*.html",
    "static/**/*.js",
]
